Size up social links and prevent transform to act on the StackOverflow widget

--- a/css/modules/social-links.css
+++ b/css/modules/social-links.css
@@ -12,7 +12,7 @@
 }
 
 .social-links {
-  font-size: larger;
+  font-size: x-large;
 }
 
 .social-links a:hover {
